--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,19 @@
 {
-    "env":{
-        "MONGODB_URI": "mongodb+srv://mongo:ognom@cluster0.npywdnm.mongodb.net/?retryWrites=true&w=majority"
+    "env": {
+      "MONGODB_URI": "mongodb+srv://mongo:ognom@cluster0.npywdnm.mongodb.net/?retryWrites=true&w=majority"
     },
-    "builds": [{
+    "builds": [
+      {
         "src": "src/main.ts",
         "use": "@vercel/node"
-    }],
-    "routes":[{
-        "dest": "src/main.ts",
-        "methods": [
-            "GET",
-            "POST",
-            "PATCH",
-            "PUT",
-            "DELETE"
-        ]
-    }]
-}
+      }
+    ],
+    "routes": [
+      {
+        "handle": "src/main.ts",
+        "src": "/(.*)",
+        "methods": ["GET", "POST", "PATCH", "PUT", "DELETE"]
+      }
+    ]
+  }
+  
